--- a/src/app/admin/admin-profile/admin-profile.component.html
+++ b/src/app/admin/admin-profile/admin-profile.component.html
@@ -61,6 +61,13 @@
             </li>
 
             <li class="nav-item">
+              <a class="nav-link" routerLink="/admin/view-agent">
+                <i class="menu-icon typcn typcn-th-large-outline"></i>
+                <span class="menu-title">View Agents</span>
+              </a>
+            </li>
+
+            <li class="nav-item">
               <a class="nav-link active" routerLink="admin/profile">
                 <i class="menu-icon typcn typcn-bell"></i>
                 <span class="menu-title">Profile</span>
