--- a/src/app/admin/dashboard-page/dashboard-page.component.html
+++ b/src/app/admin/dashboard-page/dashboard-page.component.html
@@ -62,6 +62,13 @@
             </li>
 
             <li class="nav-item">
+              <a class="nav-link" routerLink="/admin/view-agent">
+                <i class="menu-icon typcn typcn-th-large-outline"></i>
+                <span class="menu-title">View Agents</span>
+              </a>
+            </li>
+
+            <li class="nav-item">
               <a class="nav-link" routerLink="/admin/profile">
                 <i class="menu-icon typcn typcn-bell"></i>
                 <span class="menu-title">Profile</span>
@@ -137,90 +144,103 @@
                           <h4 class="card-title mb-0">Users</h4>
                         </div>
                         <p>Registered Users</p>
+                        <div class="example-header">
+                          <mat-form-field>
+                            <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+                          </mat-form-field>
+                        </div>
 
-                        <div class="table-responsive">
-                          <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-hover">
-                            <thead>
-                              <tr>
-                                <th>Name</th>
-                                <th>Unique Id</th>
-                                <!-- <th>Agent</th> -->
-                                <th>Email</th>
-                                <th>Updated On</th>
-                                <th>Gender</th>
-                                <th>D.O.B</th>
-                                <th>Zone</th>
-                                <th>Unit</th>
-                                <th>Phone No</th>
-                                <th>State</th>
-                                <th>Vehicle No</th>
-                                <th>Action</th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                              <tr *ngFor="let user of users" >
-                                <td>{{ user?.firstname }} {{user?.middlename}} {{user?.lastname}}</td>
-                                <td>{{ user?.uniqueId | uppercase }}</td>
-                                <!-- <td>{{ user?.agentId? user?.agentId.name : 'Unknown'}}</td> -->
-                                <td>{{ user?.email }}</td>
-                                <td>{{ user?.updatedAt | date }}</td>
-                                <td>{{ user?.gender }}</td>
-                                <td>{{ user?.dob }}</td>
-                                <td>{{ user?.zone }}</td>
-                                <td>{{ user?.unit }}</td>
-                                <td>{{ user?.phone_no }}</td>
-                                <td>{{ user?.state }}</td>
-                                <td>{{ user?.vehicle_no }}</td>
-                                <td>
-                                  <!-- <label class="badge badge-success" data-toggle="modal" data-target="#exampleModal">Approve</label> -->
-                                  <button class="btn btn-secondary" data-toggle="modal" 
-                                  [attr.data-target]="'#'+user.uniqueId">View</button> &nbsp;
-                                  <button class="btn badge {{user.approve? 'badge-success':'badge-danger'}}" (click) = "onApprove(user._id)">{{user.approve? 'Approved' : 'Approve'}}</button>
-                                </td>
-                              </tr>
-                            </tbody>
-                          </table>
-                
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                        <div class="example-container mat-elevation-z8">
 
-                  <div class="col-md-12 grid-margin">
-                    <div class="card">
-                      <div class="card-body">
-                        <div class="d-flex justify-content-between">
-                          <h4 class="card-title mb-0">Agents</h4>
+                          <mat-table [dataSource]="dataSource" matSort>
+
+                            <!-- Name Column -->
+                            <ng-container matColumnDef="Name">
+                              <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+                              <mat-cell *matCellDef="let row"> {{row.firstname}} {{row.middlename}} {{row.lastname}} </mat-cell>
+                            </ng-container>
+
+                            <!-- UniqueID Column -->
+                            <ng-container matColumnDef="Unique Id">
+                              <mat-header-cell *matHeaderCellDef mat-sort-header>Unique ID </mat-header-cell>
+                              <mat-cell *matCellDef="let row"> {{row.uniqueId | uppercase}} </mat-cell>
+                            </ng-container>
+
+                            <!-- Progress Column -->
+                            <ng-container matColumnDef="Email">
+                              <mat-header-cell *matHeaderCellDef mat-sort-header> Email </mat-header-cell>
+                              <mat-cell *matCellDef="let row"> {{row.email}} </mat-cell>
+                            </ng-container>
+
+                            <!-- Name Column -->
+                            <ng-container matColumnDef="Updated On">
+                              <mat-header-cell *matHeaderCellDef mat-sort-header> Updated On </mat-header-cell>
+                              <mat-cell *matCellDef="let row"> {{row.updatedAt | date}} </mat-cell>
+                            </ng-container>
+
+                            <!-- Color Column -->
+                            <ng-container matColumnDef="Gender">
+                              <mat-header-cell *matHeaderCellDef mat-sort-header> Gender </mat-header-cell>
+                              <mat-cell *matCellDef="let row"> {{row.gender}} </mat-cell>
+                            </ng-container>
+
+                            <!-- Color Column -->
+                            <ng-container matColumnDef="D.O.B">
+                              <mat-header-cell *matHeaderCellDef mat-sort-header> D.O.B </mat-header-cell>
+                              <mat-cell *matCellDef="let row"> {{row.dob}} </mat-cell>
+                            </ng-container>
+
+                            <!-- Color Column -->
+                            <ng-container matColumnDef="Zone">
+                              <mat-header-cell *matHeaderCellDef mat-sort-header> Zone 
+                              </mat-header-cell>
+                              <mat-cell *matCellDef="let row"> {{row.zone}} </mat-cell>
+                            </ng-container>
+
+                            <!-- Color Column -->
+                            <ng-container matColumnDef="Unit">
+                              <mat-header-cell *matHeaderCellDef mat-sort-header> Unit
+                              </mat-header-cell>
+                              <mat-cell *matCellDef="let row"> {{row.unit}} </mat-cell>
+                            </ng-container>
+
+                            <!-- Color Column -->
+                            <ng-container matColumnDef="Phone No">
+                              <mat-header-cell *matHeaderCellDef mat-sort-header> Phone No </mat-header-cell>
+                              <mat-cell *matCellDef="let row"> {{row.phone_no}} </mat-cell>
+                            </ng-container>
+
+                            <!-- Color Column -->
+                            <ng-container matColumnDef="State">
+                              <mat-header-cell *matHeaderCellDef mat-sort-header> State </mat-header-cell>
+                              <mat-cell *matCellDef="let row"> {{row.state}} </mat-cell>
+                            </ng-container>
+
+                            <!-- Color Column -->
+                            <ng-container matColumnDef="Vehicle No">
+                              <mat-header-cell *matHeaderCellDef mat-sort-header> Vehicle No </mat-header-cell>
+                              <mat-cell *matCellDef="let row"> {{row.vehicle_no }} </mat-cell>
+                            </ng-container>
+
+                            <!-- Color Column -->
+                            <ng-container matColumnDef="Action">
+                              <mat-header-cell *matHeaderCellDef mat-sort-header> Action </mat-header-cell>
+                              <mat-cell *matCellDef="let row"> 
+                                <button class="btn btn-secondary" data-toggle="modal" 
+                                  [attr.data-target]="'#'+row.uniqueId">View
+                                </button> &nbsp;
+                                  <button class="btn badge {{row.approve? 'badge-success':'badge-danger'}}" (click) = "onApprove(row._id)">{{row.approve? 'Approved' : 'Approve'}}</button>
+                                </mat-cell>
+                            </ng-container>
+
+                            <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                            <mat-row *matRowDef="let row; columns: displayedColumns;">
+                            </mat-row>
+                          </mat-table>
+
+                          <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
                         </div>
-                        <p>Registered Agents</p>
-                        <div class="table-responsive">
-                          <table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped table-hover">
-                            <thead>
-                              <tr>
-                                <th>Name</th>
-                                <th>Email</th>
-                                <th>Added on</th>
-                                <th>Status</th>
-                                <th>Action</th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                              <tr *ngFor = "let agent of agents">
-                                <td>{{agent?.name}}</td>
-                                <td>{{agent?.email}}</td>
-                                <td>{{agent?.updatedAt | date}}</td>
-                                <td>{{agent?.is_active? 'Active' : 'Disabled'}}</td>
-                                <td>
-                                  <!-- <label class="badge badge-success" >View</label> -->
-                                  <button class="btn badge {{agent?.is_active? 'badge-danger' : 'badge-success'}} mr-1" (click) = "onAccountStatus(agent?._id)">
-                                    {{agent?.is_active? 'Deactivate' : 'Activate'}}
-                                  </button>
-                                  <button class="btn badge badge-danger" (click)="onDelete(agent?._id)">Delete</button>
-                                </td>
-                              </tr>
-                            </tbody>
-                          </table>
-                        </div>
+
                       </div>
                     </div>
                   </div>
